--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "^16.7.5",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.1"
   },
